css only fix for tweet overflow

--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -1224,6 +1224,7 @@ section#sharing {
 
         li {
             overflow: hidden;
+            whitespace: no-wrap;
             margin: 0 0 20px 0;
 
             &:last-child {
@@ -1268,8 +1269,15 @@ section#sharing {
                 float: left;
                 font-size: 16px;
                 margin-bottom: 20px;
-                margin-left: 50px;
+                padding-left: 50px;
+                width: 100%;
                 line-height: 1.6;
+                overflow: hidden;
+                white-space: pre-wrap; /* css-3 */    
+                white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+                white-space: -pre-wrap; /* Opera 4-6 */    
+                white-space: -o-pre-wrap; /* Opera 7 */    
+                word-wrap: break-word; /* Internet Explorer 5.5+ */
 
                 a {
                     color: $accent;
